@@ -207,7 +207,7 @@ SEE ALSO
         Install the Map::Tube concrete metro modules.
 
 REPOSITORY
-    <https://github.com/tupinek/Map-Tube-Sofia>
+    <https://github.com/michal-josef-spacek/Map-Tube-Sofia>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
