@@ -1,6 +1,7 @@
 0.11
  - Fix use lib in Makefile.PL.
  - Improve LICENSE AND COPYRIGHT section in doc.
+ - Update author github username.
 
 0.10 2025-01-22T09:08:53+01:00
  - Improve SYNOPSIS section in doc.
